apps/aether/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: aether
spec:
  ports:
    - port: 80
      targetPort: aether
  selector:
    app.kubernetes.io/name: aether
